<?xml version="1.0"?>
<package>
  <name>robpi_nav</name>
  <version>0.0.0</version>
  <description>launch files </description>
  
  <maintainer email="aaaa@gmail.com">aa</maintainer>
  
  <license>Apache v2 license</license>
  
  <url type="website">https://github.com/SquadCollaborativeRobotics/sonar_to_laserscan</url>
  
  <author email="elucidation@gmail.com">Sam Ansari</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <run_depend>roscpp</run_depend>

</package>